# master-thesis

./: .gitignore  Dockerfile  README.md  full_bpe.json  pyproject.toml
.github/workflows/: docker-image.yml
src/diffccoder/: runner.py
src/diffccoder/apps/data/: chunkify_large_txt.py  extract_parquet.py  process_small_xml.py  tokenize_files.py  train_tokenizer.py
src/diffccoder/apps/other/: generate_template_yamls.py
src/diffccoder/commands/data/: chunkify_large_txt.py  extract_parquet.py  process_small_xml.py  tokenize_dante.py  tokenize_files.py  train_tokenizer.py
src/diffccoder/commands/model/: run_diffusion_training.py  run_fine_tuning.py  run_inference.py  run_pretraining.py
src/diffccoder/commands/other/: create_experiment.py  create_or_clone_run.py  generate_template_yamls.py  mlflow_updater.py  set_dotenv.py
src/diffccoder/configs/: base.py  diffusion_config.py  enums.py  experiment_config.py  optimization_config.py  rwkv_config.py  tokenizer_config.py  trainer_config.py
src/diffccoder/data/: npy_clm_dataset.py  npy_data_loader.py  npz_fine_tune_dataset.py  utils.py
src/diffccoder/lightning_modules/: mlflow_distinct_logger.py  model_runner.py  prediction_writer.py  training_base.py
src/diffccoder/lightning_modules/finetuning/: module.py
src/diffccoder/lightning_modules/inference/: module.py
src/diffccoder/lightning_modules/pretraining/: module.py
src/diffccoder/lightning_modules/training/: module.py
src/diffccoder/model/: debug.py
src/diffccoder/model/diffusion/: DIFFRWKV.py  betas.py  buffers.py  diffusion.py  ema.py  inference.py  sampler.py
src/diffccoder/model/kernels/: wkv.py
src/diffccoder/model/kernels/cuda/: wkv_cuda.cu  wkv_cuda_bf16.cu  wkv_op.cpp  wkv_op_bf16.cpp
src/diffccoder/model/rwkv/: RWKVCM.py  RWKVGPT.py  initialization.py  layers.py  outputs.py
src/diffccoder/utils/: generic.py  l2wrap.py  lr_scheduler.py  mlflow_utils.py  outputs.py  rwkv_kernel_context.py  task_scheduler.py  warm_up_scheduler.py
src/diffccoder/workflow/: mlflow_checkpointer.py  model_runner.py
src/diffccoder/workflow/pretraining/: module.py
src/templates/configs/: debugtrainerconfig.yaml  optimizationconfig.yaml  rwkvconfig.yaml  tokenizerconfig.yaml  trainerconfig.yaml
templates/: startup.cfg
templates/configs/: debugtrainerconfig.yaml  diffusionconfig.yaml  experimentconfig.yaml  optimizationconfig.yaml  rwkvconfig.yaml  tokenizerconfig.yaml  trainerconfig.yaml
