[tool.poetry]
name = "diff-c-coder"
version = "0.1.1"
description = "Diffusion Model based code generator from text."
authors = ["Kamil Chrustowski <kachr@duck.com>"]
readme = "README.md"
packages = [{include = "diffccoder", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
tensorboard = "^2.14.0"
mlflow = "2.9.2"
mlflow-export-import = {version = "^1.2.0", source = "PyPi"}
lightning = "^2.0.6"
ipykernel = "^6.25.1"
jupyter = "^1.0.0"
pyyaml = "^6.0.1"
loguru = "^0.7.1"
tokenizers = "^0.14.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.3"
fastparquet = "^2023.8.0"
docopt = "^0.6.2"
lxml = "^4.9.3"
chardet = "^5.2.0"
dask = "^2023.9.1"
cleo = "^2.0.1"
ninja = "^1.11.1.1"
questionary = "^2.0.1"
transformers = "^4.35.2"
bitsandbytes = [{url = "https://github.com/jllllll/bitsandbytes-windows-webui/releases/download/wheels/bitsandbytes-0.41.2.post2-py3-none-win_amd64.whl", markers = "sys_platform == 'win32'"},
                {version = "^0.41.2.post2", markers = "sys_platform == 'linux'" }]
torchinfo = "^1.8.0"
einops = "^0.7.0"
ema-pytorch = "^0.4.2"
torch = [{version = "2.3.0.dev20240202+cu118", source = "torch-nightly", markers = "sys_platform == 'win32'"},
         {version = "^2.2.0", source = "torch", markers = "sys_platform == 'linux'"}]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118" #"https://download.pytorch.org/whl/" #
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "diffccoder.runner:app.run"